<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_to_tic_tac_toe"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/grid" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="201dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_symbol"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="0"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_symbol"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="1" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_symbol"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_symbol"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="3"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_symbol"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="4" />

            <ImageView
                android:id="@+id/img5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_symbol"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_symbol"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="6"

                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/img7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_symbol"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="7" />

            <ImageView
                android:id="@+id/img8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_symbol"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="8" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_s_turn_tap_to_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:textStyle="italic"
        android:textColor="@color/ligth_grey"
        android:textSize="20sp" />

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:onClick="quitClicked"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/score"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/playerXName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_x"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/score"
        android:textStyle="italic"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/playerXScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/score"
        app:layout_constraintStart_toEndOf="@id/playerXName"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/_0"/>

    <TextView
        android:id="@+id/playerOName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_o"
        app:layout_constraintStart_toEndOf="@id/playerXScore"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/score"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_marginStart="35dp"
        />

    <TextView
        android:id="@+id/playerOScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/score"
        app:layout_constraintStart_toEndOf="@id/playerOName"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/_0"/>
</androidx.constraintlayout.widget.ConstraintLayout>